load(
    "//absl:copts.bzl",
    "ABSL_DEFAULT_COPTS",
    "ABSL_TEST_COPTS",
)

package(default_visibility = ["//visibility:public"])

licenses(["notice"])  # Apache 2.0

cc_library(
    name = "int128",
    srcs = [
        "int128.cc",
        "int128_have_intrinsic.inc",
        "int128_no_intrinsic.inc",
    ],
    hdrs = ["int128.h"],
    copts = ABSL_DEFAULT_COPTS,
    deps = [
        "//absl/base:config",
        "//absl/base:core_headers",
    ],
)

cc_test(
    name = "int128_test",
    size = "small",
    srcs = [
        "int128_stream_test.cc",
        "int128_test.cc",
    ],
    copts = ABSL_TEST_COPTS,
    deps = [
        ":int128",
        "//absl/base",
        "//absl/base:core_headers",
        "//absl/meta:type_traits",
        "@com_google_googletest//:gtest_main",
    ],
)
