load(
    "//absl:copts.bzl",
    "ABSL_DEFAULT_COPTS",
    "ABSL_TEST_COPTS",
)
load(
    "//absl:test_dependencies.bzl",
    "GUNIT_MAIN_DEPS_SELECTOR",
)

package(default_visibility = ["//visibility:public"])

licenses(["unencumbered"])  # Owned by Google

cc_library(
    name = "utility",
    srcs = ["utility.cc"],
    hdrs = ["utility.h"],
    copts = ABSL_DEFAULT_COPTS,
    deps = [
        "//absl/base:config",
        "//absl/meta:type_traits",
    ],
)

cc_test(
    name = "utility_test",
    srcs = ["utility_test.cc"],
    copts = ABSL_TEST_COPTS,
    deps = [
        ":utility",
        "//absl/base:core_headers",
    ] + select(GUNIT_MAIN_DEPS_SELECTOR),
)
